Bug 873923, add a method to allow popups to be anchored at a rectangle, r=tn,mark,khuey